--- a/ML_ICP1.ipynb
+++ b/ML_ICP1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7NMGPcTehtb5pvqvDpEKa",
+      "authorship_tag": "ABX9TyOhu+dEUxXzIU5fpxktNoav",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,11 +267,13 @@
     {
       "cell_type": "code",
       "source": [
+        "# radius as user input and calculate the area.\n",
         "radius = float(input(\"Enter the radius of the circle in meters: \"))\n",
         "\n",
         "pi = 3.14159\n",
-        "\n",
+        " #area of a circle and assign the value to a variable name of _area_of_circle_\n",
         "area_of_circle = pi * (radius ** 2)\n",
+        "#circumference of a circle and assign the value to a variable name of _circum_of_circle_\n",
         "circum_of_circle = 2 * pi * radius\n",
         "\n",
         "print(\"The area of the circle is:\", area_of_circle, \"square meters\")\n",
@@ -282,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8Zr6ps8dPOqQ",
-        "outputId": "0de20273-180e-45e6-a9c0-34b90178087a"
+        "outputId": "11e82106-2075-43a3-fc52-f9dc71014be7"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -300,6 +302,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#How many unique words have been used in the sentence? Use the split methods and set to get the unique words.\n",
         "sentence = \"I am a teacher and I love to inspire and teach people\"\n",
         "words = sentence.split()\n",
         "unique_words = set(words)\n",
@@ -311,9 +314,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i13muuSrPPTU",
-        "outputId": "7f9a3021-2f4c-42fc-b5c1-b2789b375b85"
+        "outputId": "e71a757e-f86a-4525-8445-335a38926886"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,6 +330,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Use a tab escape sequence to get the following lines.\n",
         "print(\"Name\\tAge\\tCountry\\tCity\")\n",
         "print(\"Asabeneh\\t250\\tFinland\\tHelsinki\")"
       ],
@@ -352,6 +356,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#string formatting method to display the following:\n",
         "radius = 10\n",
         "area = 3.14 * radius ** 2\n",
         "print(f\"The area of a circle with radius {radius} is {area} meters square.\")"
