--- a/ML_ICP_2.ipynb
+++ b/ML_ICP_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMp7h3JrZTgPwY6td1KZObW",
+      "authorship_tag": "ABX9TyN281tUMzEz2vGWh/SaPU5+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "xp6eDu6R012p",
-        "outputId": "bd00a1dd-a3a0-4941-a53a-916631c072cb",
+        "outputId": "2c6f1a89-37f4-4537-d875-c25fdbc5473a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -54,6 +54,7 @@
         }
       ],
       "source": [
+        "#1.\tUse a python code to display the following star pattern using the for loop\n",
         "rows = 5\n",
         "for i in range(1, rows + 1):\n",
         "    for j in range(i):\n",
@@ -68,29 +69,31 @@
     {
       "cell_type": "code",
       "source": [
+        "#\n",
         "my_list = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
-        "for i in range(len(my_list)):\n",
-        "    if (i + 1) % 2 != 0:\n",
-        "        print(my_list[i])"
+        "\n",
+        "# Loop through the list, starting from index 1 (odd index)\n",
+        "for i in range(1, len(my_list), 2):\n",
+        "    print(my_list[i])"
       ],
       "metadata": {
         "id": "K9Tlkb5s04Mw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f3e17ee-cf25-4a83-c9a0-78bd80f3338a"
+        "outputId": "08e24bf6-ce44-4fc7-d654-601eeaa4c100"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10\n",
-            "30\n",
-            "50\n",
-            "70\n",
-            "90\n"
+            "20\n",
+            "40\n",
+            "60\n",
+            "80\n",
+            "100\n"
           ]
         }
       ]
