--- a/ML_ICP_2.ipynb
+++ b/ML_ICP_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN281tUMzEz2vGWh/SaPU5+",
+      "authorship_tag": "ABX9TyNDDIHora97BdO1clwh4Xr+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#\n",
+        "\n",
         "my_list = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
         "\n",
         "# Loop through the list, starting from index 1 (odd index)\n",
@@ -101,6 +101,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#3. Write a code that appends the type of elements from a given list\n",
         "x = [23, 'Python', 23.98]\n",
         "for i in range(len(x)):\n",
         "    print(x[i])\n",
@@ -111,9 +112,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vIyfvnoziZyf",
-        "outputId": "289d75f4-dea2-48b7-a6e6-e6e971fb4ac6"
+        "outputId": "8b284cac-ccd4-4afc-a04e-eb0496823f6c"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,6 +133,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Write a function that takes a list and returns a new list with unique items of the first list.\n",
         "def unique_items(input_list):\n",
         "    return list(set(input_list))\n",
         "\n",
@@ -161,6 +163,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Write a function that accepts a string and calculate the number of upper-case letters and lower-case\n",
         "def count_case_characters(input_string):\n",
         "    upper_count = 0\n",
         "    lower_count = 0\n",
